<resources>
    <string name="app_name">金圆流向管控</string>
    <string name="app_version">v1.0.1</string>
    <string name="cp_name">金圆流向管控</string>

    <string name="cp_name1">金圆水泥</string>

    <string name="truck_info_manager">流向管控</string>
    <string name="truck_measure_weight">流向管控</string>
    <!-- XListView -->
    <string name="hxlistview_header_hint_normal">向左拉动刷新</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">最近更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_finish">没有更多了</string>
    <string name="xlistview_footer_hint_error">加载失败</string>
    <string name="xlistview_footer_hint_reload"><u>点击重新加载</u></string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="coefficient_set">系数设定</string>
    <string name="tip_result">返回数据</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login">登录</string>
    <string name="exit_click_again">再点一次退出</string>
    <string name="count">手机号</string>
    <string name="password">密码</string>
    <string name="remember">记住密码</string>
    <string name="version">版本号</string>
    <string name="cancel">取消</string>
    <string name="modify">修改</string>
    <string name="editor">编辑</string>
    <string name="commit">确定</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="title">请选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="truck_info">车辆信息</string>
    <string name="truck_add">车辆添加</string>
    <string name="truck_list">车辆列表</string>
    <string name="weight_trend">重量趋势</string>
    <string name="details_info">详细信息</string>
    <string name="device_id">设备ID</string>
    <string name="truck_number">车 牌 号 码:</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="time_interval">时间间隔</string>
    <string name="data_numbers">条数</string>
    <string name="truck_weight">车重:</string>
    <string name="weight_inquire_date">日期:</string>
    <string name="inquire">查询</string>
    <string name="map_track">地图轨迹</string>
    <string name="truck_online_info">车辆在线信息</string>
    <string name="truck_state_null">该车无状态数据</string>
    <string name="company_name">公 司 名 称:</string>
    <string name="select_company_name">请选择公司名称</string>
    <string name="device_number">设 备 编 号:</string>
    <string name="weight">重量</string>
    <string name="weight_update_time">重量更新时间</string>
    <string name="lng">经度</string>
    <string name="lat">纬度</string>
    <string name="location_update_time">位置更新时间</string>
    <string name="input_device_number">请输入设备编号</string>
    <string name="gps_number"> GPS 编 号:</string>
    <string name="input_gps_number">请输入GPS编号</string>
    <string name="input_truck_number">请输入车牌号码</string>
    <string name="phone">电 话 号 码:</string>
    <string name="input_phone">请输入电话号码</string>
    <string name="load_capacity">载重量(吨):</string>
    <string name="input_load_capacity">请输入载重量</string>
    <string name="production_time">生 产 日 期:</string>
    <string name="input_production_time">请选择车辆生产日期</string>
    <string name="weight_kg">公斤</string>
    <string name="weight_ton">吨</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="APP_File_Provider"> com.hand.handtruck.provider99</string>

    <!-- main page -->
    <string name="main_title">流向管控</string>
    <string name="tab_01">首页</string>
    <string name="tab_02">订单</string>
    <string name="tab_03">信息</string>
    <string name="tab_04">审核</string>
    <string name="tab_05">我的</string>
</resources>
